sprint1/step1 - overflow-y fix

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -8,6 +8,6 @@
 
 .list {
     display: flex;
-    overflow: scroll;
+    overflow-y: scroll;
     flex-direction: column;
 }
