--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -7,7 +7,7 @@
 
 .list {
     display: flex;
-    overflow: scroll;
+    overflow-y: scroll;
     flex-direction: column;
 }
 
